crates/decpld-report/tests/snapshots/inspect__a_disagreeing_checksum_is_called_out_in_the_text_report.snap
---
source: crates/decpld-report/tests/inspect.rs
expression: report().with_source(source).to_string()
---
SYNTH2  DIP8  81 fuses

macrocell 0 -> pin 3
  mode      registered
  polarity  active low
  feedback  pin
  enable    always
  terms     2 of 2
      pin1 & !pin2
    | pin4

macrocell 1 -> pin 4
  mode      combinational
  polarity  active high
  feedback  pin
  enable    never (pad not driven)
  terms     0 of 3

device-wide terms
  asynchronous reset  !pin1 & pin3

signature  ff ff (not printable)
security   clear

file
  header    a two-macrocell part
  checksum  0000 declared, 1234 computed — DISAGREE
  note      written by hand
  retained  QP J
