crates/decpld-report/tests/snapshots/inspect__the_text_report_shows_what_the_file_claimed.snap
---
source: crates/decpld-report/tests/inspect.rs
expression: report().with_source(source_report()).to_string()
---
SYNTH2  DIP8  81 fuses

macrocell 0 -> pin 3
  mode      registered
  polarity  active low
  feedback  pin
  enable    always
  terms     2 of 2
      pin1 & !pin2
    | pin4

macrocell 1 -> pin 4
  mode      combinational
  polarity  active high
  feedback  pin
  enable    never (pad not driven)
  terms     0 of 3

device-wide terms
  asynchronous reset  !pin1 & pin3

signature  ff ff (not printable)
security   clear

file
  header    a two-macrocell part
  checksum  1234
  note      written by hand
  retained  QP J
